Added run exports to gradle build